feat: Add OpenTofu configuration for DEV environment
- Add VM module for creating VMs from vSphere templates
- Add DEV environment with dual vCenter provider support
- Configure k8s-dev-21 on s2842 (vCenter Legacy)
- Configure k8s-dev-22 on s2843 (vCenter-A)
- Configure k8s-dev-23 on s3168 (vCenter-A)
- Add documentation and example credentials file
- Update .gitignore for terraform files

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,8 @@ Thumbs.db
 .terraform/
 .terraform.lock.hcl
 *.tfvars
-!*.tfvars.example
+!*.example.tfvars
+!credentials.example.tfvars
 crash.log
 
 # Ansible
