--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -8,9 +8,10 @@ fact_caching = jsonfile
 fact_caching_connection = /tmp/ansible_facts_cache
 fact_caching_timeout = 3600
 
-# Ausgabe-Formatierung
-stdout_callback = yaml
-callback_whitelist = profile_tasks
+# Ausgabe-Formatierung (Ansible 2.20+)
+stdout_callback = default
+callbacks_enabled = profile_tasks
+result_format = yaml
 
 # SSH Einstellungen
 [ssh_connection]
