--- a/ansible/playbooks/02-install-k3s.yml
+++ b/ansible/playbooks/02-install-k3s.yml
@@ -65,7 +65,7 @@
 
     - name: K3s Token generieren wenn nicht gesetzt
       ansible.builtin.set_fact:
-        generated_k3s_token: "K10{{ lookup('password', '/dev/null chars=ascii_letters,digits length=48') }}::server::{{ lookup('password', '/dev/null chars=ascii_letters,digits length=48') }}"
+        generated_k3s_token: "K10{{ lookup('password', '/dev/null chars=ascii_letters,digits length=48') }}::server:{{ lookup('password', '/dev/null chars=ascii_letters,digits length=48') }}"
       when: k3s_token == "" or k3s_token is not defined
       run_once: true
 
