--- a/ansible/playbooks/02-install-k3s.yml
+++ b/ansible/playbooks/02-install-k3s.yml
@@ -158,7 +158,7 @@
       ansible.builtin.shell: |
         curl -sfL https://get.k3s.io | \
         INSTALL_K3S_CHANNEL={{ k3s_channel }} \
-        K3S_TOKEN={{ hostvars[groups['k3s_initial'][0]]['final_k3s_token'] }} \
+        K3S_TOKEN={{ hostvars[groups['k3s_initial_server'][0]]['final_k3s_token'] }} \
         sh -s - server \
         --server {{ k3s_server_url }}
       args:
