--- a/ansible/inventory/dev/group_vars/all.yml
+++ b/ansible/inventory/dev/group_vars/all.yml
@@ -6,11 +6,13 @@
 # K3s Konfiguration
 # -----------------------------------------------------------------------------
 
-# K3s Version (leer = aktuelle stable)
+# K3s Version (leer = aktuelle vom gewählten Channel)
 k3s_version: ""
 
 # K3s Channel (stable, latest, testing)
-k3s_channel: "stable"
+# DEV: latest = neueste K3s Version (aktuell K8s 1.35+)
+# TEST/PROD: stable = getestete stabile Version
+k3s_channel: "latest"
 
 # Cluster Token - wird aus secrets.yml geladen
 # k3s_token: "{{ vault_k3s_token }}"
