Pin K3s to version v1.35.0+k3s3
- Set fixed K3s version v1.35.0+k3s3 for reproducibility
- Remove k3s_channel parameter (not needed with fixed version)
- Change INSTALL_K3S_CHANNEL to INSTALL_K3S_VERSION in playbook
- Strategy: Use pinned versions even in DEV for better control

--- a/ansible/inventory/dev/group_vars/all.yml
+++ b/ansible/inventory/dev/group_vars/all.yml
@@ -6,13 +6,8 @@
 # K3s Konfiguration
 # -----------------------------------------------------------------------------
 
-# K3s Version (leer = aktuelle vom gewählten Channel)
-k3s_version: ""
-
-# K3s Channel (stable, latest, testing)
-# DEV: latest = neueste K3s Version (aktuell K8s 1.35+)
-# TEST/PROD: stable = getestete stabile Version
-k3s_channel: "latest"
+# K3s Version (fest gepinnt für Reproduzierbarkeit)
+k3s_version: "v1.35.0+k3s3"
 
 # Cluster Token - wird aus secrets.yml geladen
 # k3s_token: "{{ vault_k3s_token }}"
