Phase 3b: Setup SOPS + Age for secret management
- Add .sops.yaml configuration with Age public key
- Create encrypted secret templates (ArgoCD repo, IONOS API)
- Update .gitignore for Age private key protection
- Add comprehensive SOPS documentation

Secrets can now be encrypted in Git using Age encryption.
Next: Encrypt actual secrets on Management-VM.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,12 @@ secrets.yaml
 secrets.yml
 !*.enc.yaml
 
+# Age/SOPS Keys
+.age/
+*.age.key
+*-key.txt
+!*-key.txt.pub
+
 # Kubernetes
 kubeconfig
 kubeconfig.yaml
