Encrypt IONOS API secret for cert-manager

--- a/kubernetes/base/cert-manager/secrets/ionos-secret.enc.yaml
+++ b/kubernetes/base/cert-manager/secrets/ionos-secret.enc.yaml
@@ -1,10 +1,25 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ionos-secret
-  namespace: cert-manager
+    name: ionos-secret
+    namespace: cert-manager
 type: Opaque
 stringData:
-  # IONOS API Credentials (aus 1Password)
-  IONOS_PUBLIC_PREFIX: "PLACEHOLDER_PUBLIC_PREFIX"
-  IONOS_SECRET: "PLACEHOLDER_SECRET_KEY"
+    #ENC[AES256_GCM,data:5DqKtW39Wz1w4TOQIcIVQcsMWZ4rDh6BOtZ7VMX4Zh4wsyZcMVs=,iv:wJcs5eHppem1AmjM9w0zzKYHrmpBQeWM2C1CCtqoqP8=,tag:hwnIKxGwo+QP0iiK6Z5OgQ==,type:comment]
+    IONOS_PUBLIC_PREFIX: ENC[AES256_GCM,data:gQmWvYdnVlwpfqmuAjx7SovXFkC+AkW4CLS1PBxvWnU=,iv:6d+Vgewro7/iDPxcS0JzpDHYf6WBO2XEitCQM68yjKg=,tag:9GQIAXtmL99mB2G/lW1y5w==,type:str]
+    IONOS_SECRET: ENC[AES256_GCM,data:NDeTBfpOgytWzjWjZhIjv/uOKpkLzrGLvlkhhbdY/I8aBYBkvfsRgS6XvyODqkAWufh/6d51h01lc6cbZCfRlS5jGIcuzBeUTXJQiJjadYUSfyVuE80=,iv:LTHGe8a1ofeAhXiNO8wGBPFG7qqQZfOXYPwdsUFCye0=,tag:S2B6xstLceBYz+aHzslyfw==,type:str]
+sops:
+    age:
+        - recipient: age1fdqtcha9jnzqafe5t6hed6v5sv858x2tt6nwuw00u3luyxuaqcxqh5mcrm
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBMRWNEZ1Z5KzE3UDJ6VnVx
+            YnV1U1JVM0QxbmpOQi96S09uYVdTTG9WY2hjCmJENWJkV3M5SkpMOU9HeGJsSWZ1
+            OGtVWXZnWE9CajZ4cmo5Y29NUVdLM28KLS0tIHFSc1d1NHYwUjdxLzFCSjZ3bGRK
+            ZmFWVmNlakpCd2szdXFHUTV5aUQ0UjgKyT0fup3YFQh4R8qpbC9jHAI/OGAGF1Cj
+            k5VxRXudKjK5rt9sESYVxpN54A+gcK//BEyOnO4Po3nYZW6Psbk6wg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2026-02-10T08:27:25Z"
+    mac: ENC[AES256_GCM,data:nhnwARCDejO6BMkI+b47kETNneMuDlOgFhhJkYTwr1IntY1STWODZ0VX3X9q4nNET++RcgFcTtOpmk8vTlISPcS0c9wPzTc31je9ye+RRhbjAl5e8JNF7m5SD3AfjP9Iuvvjl/+yCSDCvS3SPmSk0CiD/k5kkxJ3ZEHsGIRdfws=,iv:QF77uY7UZUTr5gM0bCczSmql4081x29uM/WUvKTXfo4=,tag:kGVgWKVsCJFrX1ynr/VtUQ==,type:str]
+    encrypted_regex: ^(data|stringData)$
+    version: 3.11.0
